[gd_scene load_steps=6 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 1500, 1000 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 1500, 977.119 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 1000, 600 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 1000.84, 600 )

[node name="main" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="organsism_container" type="Node2D" parent="." index="0"]

[node name="food_container" type="Node2D" parent="." index="1"]

[node name="walls" type="Node2D" parent="." index="2"]

visible = false

[node name="StaticBody2D" type="StaticBody2D" parent="walls" index="0"]

position = Vector2( 300, 1590 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D3" type="CollisionShape2D" parent="walls/StaticBody2D" index="0"]

position = Vector2( 0, -2582.2 )
scale = Vector2( 1, 0.991824 )
shape = SubResource( 1 )
_sections_unfolded = [ "Material", "Pause", "Transform", "Visibility", "Z Index" ]

[node name="CollisionShape2D4" type="CollisionShape2D" parent="walls/StaticBody2D" index="1"]

position = Vector2( 0, -10 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="walls/StaticBody2D" index="2"]

position = Vector2( 2730, -1290 )
scale = Vector2( 2, 1 )
shape = SubResource( 3 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="walls/StaticBody2D" index="3"]

position = Vector2( -2305, -1290 )
scale = Vector2( 2, 1 )
shape = SubResource( 4 )
_sections_unfolded = [ "Pause", "Transform", "Visibility", "Z Index" ]

[node name="HUD" type="Control" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="generation_label" type="Label" parent="HUD" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 12.0
margin_top = 10.0
margin_right = 103.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Generation : 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


